# wfc

./: .ANALYSIS_QUICK_START  .actrc  .coverage  .env.dev.example  .env.prod.example  .env.test.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  ANALYSIS_SUMMARY.md  BRANCHING.md  CHANGELOG.md  CLAUDE.md  CODE-ANALYSIS-REPORT.md  CONTRIBUTING.md  DESIGN_DECISION_MATRIX.md  DIFF_REPLACEMENT_README.md  DIFF_REPLACEMENT_STRATEGY.md  DISTRIBUTION.md  Dockerfile.rest_api  ISTHISSMART.md  KNOWLEDGE_OPTIMIZATION_EXECUTIVE_SUMMARY.md  KNOWLEDGE_OPTIMIZATION_INDEX.md  KNOWLEDGE_OPTIMIZATION_STRATEGY.md  KNOWLEDGE_OPTIMIZATION_TECHNICAL.md  KNOWLEDGE_OPTIMIZATION_VISUAL_SUMMARY.txt  KNOWLEDGE_SUMMARIES_READY.md  LICENSE  Makefile  PLANNING.md  QUICKSTART.md  README.md  RESTRUCTURE_PLAN.md  RETRO-REPORT.md  VALIDATE-TOKEN-OPTIMIZATION.md  VALIDATE.md  WFC_EXPLAINED.md  docker-compose.dev.yml  docker-compose.prod.yml  (+17 more)
.claude/: settings.json
.clouddevelopment/: README.md
.devcontainer/: .dockerignore  .env.example  Dockerfile  devcontainer.json  docker-compose.override.yml.example  docker-compose.yml  setup.sh
.development/: BRANDING.md
.github/: WFC2-ROADMAP.md  copilot-instructions.md
assets/: README.md
ba/: BA-mcp-gateway-integration.md  BA-multi-tenant-wfc.md  VALIDATE.md  competitive-analysis.md  interview-transcript.json
docs/: AGENT_SKILLS_COMPLIANCE.md  API_CONTRACT.md  ARCHITECTURE.md  BRANDING.md  CLAUDE_INTEGRATION.md  CONTRIBUTING.md  DOC_REGISTRY_USAGE.md  EARS.md  ENTIRE_IO.md  GIT_SAFETY_POLICY.md  HOOKS_AND_TELEMETRY.md  MAINTENANCE.md  MULTI_ENVIRONMENT.md  PERSONAS.md  PLANNING.md  PROGRESSIVE_DISCLOSURE.md  PROJECT_INDEX.json  PR_WORKFLOW.md  QUALITY_GATE.md  QUALITY_SYSTEM.md  README.md  REGISTRY.json  REGISTRY.md  REST_API.md  SUPERCLAUDE_LEARNINGS.md  TASK-001-SUMMARY.md  TASK-002-SUMMARY.md  TRAEFIK_DEPLOYMENT.md  UNIVERSAL_INSTALL.md  WFC_BUILD.md  WFC_IMPLEMENTATION.md  WFC_MAX.md
examples/: token_management_demo.py
experiments/: task_tool_spike.py  task_tool_spike_results.md  test_task_tool_spike.py
plan/: PROPERTIES.md  TASKS.md  TEST-PLAN.md
plans/: HISTORY.json  HISTORY.md  ORCHESTRATOR_DELEGATION_ROOT_CAUSE.md  ORCHESTRATOR_DELEGATION_VALIDATION.md  ORCHESTRATOR_PROMPT_FIX.md
scripts/: act-check.sh  benchmark_tokens.py  doctor.py  (+8 more)
(+1906 files in other folders)
