[project]
name = "wfc"
version = "0.1.0"
description = "World Fucking Class - Multi-agent consensus review system"
authors = [
    {name = "Sam Fakhreddine"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "filelock>=3.13.0",  # File locking for concurrent writes (multi-tenant safety)
]

[project.scripts]
wfc = "wfc.cli:main"

[project.optional-dependencies]
# Token management (recommended for 99% token reduction)
tokens = [
    "tiktoken>=0.5.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "scikit-learn>=1.3.0",
]

# Schema validation at LLM boundaries (optional, stdlib fallback available)
validation = [
    "pydantic>=2.0",
]

# MCP server support
mcp = [
    "mcp>=1.0.0",
]

# All optional features
all = [
    "wfc[tokens,dev,validation,mcp]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wfc"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
